Header and project page spacing fix

--- a/src/assets/scss/main/_modal.scss
+++ b/src/assets/scss/main/_modal.scss
@@ -64,10 +64,7 @@
   display: flex;
   width: 30px;
   height: 30px;
-  position: absolute;
-  z-index: 4;
-  right: 32px;
-  top: 32px;
+  position: relative;
   @media screen and (max-width: 1199px) {
     right: 0px;
     top: -48px;
@@ -151,3 +148,32 @@ body.light .custom-modal.dark .box_inner::-webkit-scrollbar-thumb {
 .no-scroll {
   overflow: hidden
 }
+
+.slate {
+  width: 100%;
+  height: 70%;
+  background: #111;
+  padding: 4rem;
+  img {
+    border-radius: 6px;
+    width: 50%;
+  }
+  
+  .wire_animation{
+    width: 50%;
+    height: 30%;
+  }
+  .challenges {
+    width: 50%;
+  }
+}
+
+.project-header{
+  margin-left: 4rem;
+ border-bottom: 2px solid #bbb;
+  .company {
+    margin-top: 4rem;
+    
+  }
+}
+
