--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -930,13 +930,13 @@ body.light .header ul.icon-menu li.icon-box:hover i {
 .logo {
   width: 100%;
   height: 100%;
-  background: #222;
+  background: #252525;
+  padding: 30px;
+  border-radius: 10px;
   overflow: hidden;
   margin: 0;
   img {
     border-radius: 6px;
-    height: 100%;
-    width: 100%;
   }
   @media screen and (min-width: 1350px) {
     img {
@@ -950,42 +950,6 @@ body.light .header ul.icon-menu li.icon-box:hover i {
   }
 }
 
-.slate {
-  width: 100%;
-  height: 75%;
-  background: #111;
-  padding: 30px;
-  overflow: hidden;
-  margin: 0;
-  img {
-    border-radius: 6px;
-    width: 50%;
-  }
-  // @media screen and (min-width: 1350px) {
-  //   img {
-  //     min-height: 370px;
-  //   }
-  // }
-  // @media screen and (max-width: 450px) {
-  //   img {
-  //     min-height: 166px;
-  //   }
-  // }
-  .company {
-    margin: 2rem;
-    margin-bottom: 4rem;
-    position: relative;
-    left: 45%;
-  }
-  .wire_animation{
-    width: 50%;
-
-  }
-
-  .challenges {
-    width: 50%;
-  }
-}
 
 .portfolio .slideshow a {
   text-decoration: underline;
